# hermes-planner

./: README.md  compose.yaml
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 248907bf4ef8_use_timestamptz_for_all_datetime_columns.py  dd30d3db1fce_create_users_and_items.py
apps/api/src/: config.py  db.py  main.py  models.py
apps/api/src/auth/: router.py  schemas.py  security.py
apps/api/src/items/: router.py  schemas.py
apps/web/src/: App.tsx  Dashboard.tsx  ShaderBackground.tsx  api.ts  index.css
apps/web/src/views/: BoardView.tsx  CalendarView.tsx  ItemCard.tsx  ListView.tsx
